Make more properties required
